# portfolio-manager

./: CLAUDE.md
.github/workflows/: ci.yml
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: database.py
backend/app/api/: fixed_deposits.py  notifications.py  portfolio.py  prices.py  transactions.py  unit_trusts.py
backend/app/models/: __init__.py  fixed_deposit.py  notification_log.py  notification_setting.py  price.py  transaction.py  unit_trust.py
backend/app/schemas/: __init__.py  fixed_deposit.py  notification.py  portfolio.py  price.py  price_fetch.py  transaction.py  unit_trust.py
backend/app/schemas/providers/: __init__.py  cal_api.py
backend/app/services/: interest_calculator.py  performance.py
backend/app/services/providers/: __init__.py  base.py  cal.py  registry.py  yahoo.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_fixed_deposits.py  test_notifications.py  test_portfolio.py  test_price_fetch.py  test_prices.py  test_transactions.py  test_unit_trusts.py
backend/tests/unit/: test_schemas.py
backend/tests/unit/services/: test_interest_calculator.py  test_performance.py
backend/tests/unit/services/providers/: __init__.py  test_base.py  test_cal.py  test_registry.py  test_yahoo.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/lib/: formatters.ts  utils.ts
frontend/src/pages/: Dashboard.module.css  Dashboard.tsx  FixedDeposits.module.css  FixedDeposits.tsx  (+11 more)
(+47 files in other folders)
