[project]
name = "backend"
version = "0.1.0"
description = "Portfolio management system for unit trusts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.45",
    "aiosqlite>=0.20.0",
    "pydantic>=2.12.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "greenlet>=3.3.0",
    "yfinance>=0.2.50",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[project.scripts]
seed-db = "scripts.seed_db:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# "I" (isort), "D" (pydocstyle), "E" (pycodestyle)
extend-select = ["I", "D", "E"]
ignore = [
    "D203", # 1 blank line required before class docstring (conflicts with D211)
    "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = ["asyncio: mark test as async"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
